--- a/index.html
+++ b/index.html
@@ -7,15 +7,18 @@
 <body>
     <table border="1">
         <tr>
-            <td>1</td><td>2</td><td>3</td>
+            <th></th><td>Lexus</td><td>Toyota</td><td>Acura</td>
         </tr>
         <tr>
-            <td>4</td><td>5</td><td>6</td>
+            <th>Quoter1</th><td>1</td><td>2</td><td>3</td>
         </tr>
         <tr>
-            <td>7</td><td>8</td><td>9</td>
+            <th>Quoter2</th><td>4</td><td>5</td><td>6</td>
         </tr>
-    </table>>
+        <tr>
+            <th>Quoter3</th><td>7</td><td>8</td><td>9</td>
+        </tr>
+    </table>
 </body>
 </html>
     
