--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <li>Item3</li>
     </ol>
     
-    <a href="form.html" style="text-decoration: none"> GO TO FORM </a>
+    <a href="form.html" style="text-decoration: none"> GO TO Social Poll FORM </a>
     
 </body>
 </html>
