--- a/form.html
+++ b/form.html
@@ -43,6 +43,9 @@
             background: #f2f2f2;
             display:inline-block;
             padding: 0 0 0 0px;
+            border-radius: 100px;
+            -webkit-border-radius: 100px;
+            -moz-border-radius: 100px;
         }
         .links {
             padding: 20px 0 20px 20px;
